<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_main_bus"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:clickable="true"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#e064BE0F" >

                <ImageView
                    android:id="@+id/iv_main_bus"
                    android:layout_width="74dp"
                    android:layout_height="63dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="8dp"
                    android:src="@drawable/icon_main_bus" />

                <TextView
                    android:id="@+id/tv_main_bus"
                    style="@style/main_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_1" />

                <TextView
                    android:id="@+id/tv_main_bus_line"
                    style="@style/main_tv_style_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/iv_main_bus"
                    android:layout_toRightOf="@+id/iv_main_bus"
                    android:text="环1路" />

                <TextView
                    android:id="@+id/tv_main_bus_up_down"
                    style="@style/main_tv_style_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_main_bus_line"
                    android:layout_toRightOf="@+id/iv_main_bus"
                    android:text="开往火车站方向"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_main_bus_station"
                    style="@style/main_tv_style_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_main_bus_up_down"
                    android:layout_toRightOf="@+id/iv_main_bus"
                    android:text="金华元国际酒店" />

                <TextView
                    android:id="@+id/tv_main_bus_2"
                    style="@style/main_tv_style_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_main_bus_station"
                    android:layout_toRightOf="@+id/iv_main_bus"
                    android:text="距离5站" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:background="#009CC4" >

                <ImageView
                    android:id="@+id/iv_main_gather"
                    android:layout_width="64dp"
                    android:layout_height="53dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/icon_main_gather" />

                <TextView
                    android:id="@+id/tv_main_gather"
                    style="@style/main_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_4" />

                <TextView
                    android:id="@+id/tv_main_gather_2"
                    style="@style/main_tv_style_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_main_gather"
                    android:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:background="#951C71C4" >

                <ImageView
                    android:id="@+id/iv_main_shop"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/icon_main_shop" />

                <TextView
                    android:id="@+id/tv_main_shop"
                    style="@style/main_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_2" />

                <TextView
                    android:id="@+id/tv_main_shop_2"
                    style="@style/main_tv_style_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_main_shop"
                    android:text="大润发专场" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:background="#95Ea5a35" >

                <ImageView
                    android:id="@+id/iv_main_car"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="18dp"
                    android:src="@drawable/icon_main_car" />

                <TextView
                    android:id="@+id/tv_main_car"
                    style="@style/main_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_7"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/tv_main_car_2"
                    style="@style/main_tv_style_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_main_car" />

                <com.loopj.android.image.SmartImageView
                    android:id="@+id/siv_main_car_ad"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
					android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:adjustViewBounds="false"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_main_car_ad" />

                <TextView
                    android:id="@+id/tv_main_car_ad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="8dp"
                    android:text="北京现代专场" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="#9564BE0F" >

                <ImageView
                    android:id="@+id/iv_main_life"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/icon_main_life" />

                <TextView
                    android:id="@+id/tv_main_life"
                    style="@style/main_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_5" />

                <TextView
                    android:id="@+id/tv_main_life_2"
                    style="@style/main_tv_style_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_main_life"
                    android:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:background="#9502A4EF" >

                <ImageView
                    android:id="@+id/iv_main_list"
                    android:layout_width="58dp"
                    android:layout_height="52dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/icon_main_list" />

                <TextView
                    android:id="@+id/tv_main_list"
                    style="@style/main_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_8"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/tv_main_list_2"
                    style="@style/main_tv_style_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_main_list" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>